--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<h1>Git, GitHub & the Command Line</h1>
 		<p>Gotta love becoming a collaborative coder <3</p>
 		<img src="img/happy-blue-robot.png">
+		<p id="myComment">Let's get ready to Push!</p>
+		<p>P.S. I hope you said using your Michael Buffer, &ldquo;Let's Get Ready to Rumble!&rdquo; voice.</p>
 	</section>
 </body>
 </html>
