Added nav links to index.html and added About page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body><nav>
+		<li><a href="#contact">Contact</a></li>
+		<li><a href="about.html">About Me</a></li>.
+	</nav>
 	<section>
 		<h1>Git, GitHub & the Command Line</h1>
 		<p>Gotta love becoming a collaborative coder <3</p>
